Actividades: Boton para mostrar y ocultar hobbies

--- a/my-dream-app/src/app/app.css
+++ b/my-dream-app/src/app/app.css
@@ -13,3 +13,10 @@
   color: red;
   padding: 20px;
 }
+.btn {
+  padding: 20px;
+  color:green;
+  background-color: brown;
+  display: block;
+  margin:3px;
+}
