--- a/my-dream-app/src/app/app.html
+++ b/my-dream-app/src/app/app.html
@@ -7,7 +7,7 @@
 <div class="ash">
   <h2>{{ name }}</h2>
   <h2>{{ email }}</h2>
-
+  <button (click)="toggleHobbies()" class="btn">Mostrar/Ocultar Hobbies</button>  
   <div *ngIf="showhobbies()" class="component2">
     <h3>Hobbies:</h3>
     <ul>
