--- a/my-dream-app/src/app/app.html
+++ b/my-dream-app/src/app/app.html
@@ -1,10 +1,10 @@
 <router-outlet></router-outlet>
 
 <ul>
-  <li *ngFor="let user of users">
-    <app-user [nameUser]="user"></app-user>
-  </li>
+  <app-user *ngFor="let user of users" [nameUser]="user"></app-user>
 </ul>
+
+<button (click)="sayHello()">Hazme click</button>
 
 <div class="black">
   <h1>{{ title }}</h1>
