--- a/my-dream-app/src/app/app.html
+++ b/my-dream-app/src/app/app.html
@@ -1,7 +1,12 @@
 <router-outlet></router-outlet>
 
+<h1>Desde app.component</h1>
+
 <ul>
-  <app-user *ngFor="let user of users" [nameUser]="user"></app-user>
+  <li *ngFor="let user of users">
+    {{ user }}
+    <button (click)="deleteUser(user)">Borrar Usuario</button>
+  </li>
 </ul>
 
 <button (click)="sayHello()">Hazme click</button>
