--- a/my-dream-app/src/app/app.html
+++ b/my-dream-app/src/app/app.html
@@ -1,12 +1,20 @@
 <router-outlet></router-outlet>
-
 <h1>Desde app.component</h1>
+
+<form (submit)="addUser(newUser)">
+  <input type="text" #newUser />
+  <button>Agregar Usuario</button>
+</form>
 
 <ul>
   <li *ngFor="let user of users">
     {{ user }}
     <button (click)="deleteUser(user)">Borrar Usuario</button>
   </li>
+</ul>
+
+<ul>
+  <app-user *ngFor="let user of users" [nameUser]="user"></app-user>
 </ul>
 
 <button (click)="sayHello()">Hazme click</button>
