Implementar componente Home con pantalla de bienvenida y boton de inicio del juego

--- a/science-quiz/src/app/home/home.html
+++ b/science-quiz/src/app/home/home.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div class="home-container">
+  <h1>¡Bienvenido al Quiz de Ciencia!</h1>
+  <p>Responde preguntas sobre ciencia y pon a prueba tus conocimientos.</p>
+  <button (click)="startGame()">Comenzar</button>
+</div>
